@@ -1,4 +1,6 @@
 Version 1.3.9+svn:
+ * campaign server
+   * it's now possible to delete a campaign with the master password
  * campaigns:
    * Eastern Invasion
      * Fixed bug #10195, related to Holy Amulet's description
